qstring-allocations: Don't be blinded by user defined literals

Now also warns for user defined literals returning QLatin1String

BUG: 364092